Improvements to Command system, write instructions